<resources>
    <string name="app_name">GreenyBox</string>
    <string name="add_btn">+</string>
    <string name="setting_btn">Setting</string>
    <string name="add_item">Good</string>
    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="modify">Modify</string>
    <string name="SortName">Sort Name</string>
    <string name="SortBuyDate">Sort Buy Date</string>
    <string name="SortExpDate">Sort Exp Date</string>
    <string name="SortFreshness">Sort Freshness</string>
</resources>
